# qt-menubar-hello

./: README.md  flake.nix  meson.build  meson_options.txt
src/: main.cpp  mainwindow.cpp  mainwindow.hpp
